<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/downloadJSONButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_JSON_data_button"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/JSON_data"/>

    <EditText
        android:id="@+id/JSON_editView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false" />

    <Button
        android:id="@+id/parseButton"
        android:text="@string/parse_JSON_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/json_location"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:text="@string/json_latitude"/>

    <EditText
        android:id="@+id/JSON_latitudeView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:text="@string/json_longitude"/>

    <EditText
        android:id="@+id/JSON_longitudeView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/json_text"/>

    <EditText
        android:id="@+id/JSON_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/json_image"/>

    <EditText
        android:id="@+id/JSON_imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false" />

    <Button
        android:id="@+id/showLocationButton"
        android:text="@string/show_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>